Fix spinner not covering bottom of results table

--- a/paprika_sync/static/sass/loading_spinner.scss
+++ b/paprika_sync/static/sass/loading_spinner.scss
@@ -1,6 +1,6 @@
 // spinner: https://tobiasahlin.com/spinkit/
 .sk-circle {
-  margin: 100px auto;
+  margin: 60px auto;
   width: 40px;
   height: 40px;
   position: relative;
