--- a/paprika_sync/static/sass/project.scss
+++ b/paprika_sync/static/sass/project.scss
@@ -180,7 +180,6 @@ section.search-results {
     min-height: 200px;
     .loading-spinner {
         position: absolute;
-        margin-top: -40px;
         top: 0;
         left: 0;
         width: 100%;
